--- a/_config.ini
+++ b/_config.ini
@@ -1,20 +1,20 @@
 [general]
 app_name        = OrdersAddon
-app_customer    = CURAFARMA SRL
+app_customer    = BASE
 app_version     = v1.0.1 Beta
 
 [ftp]
-ftp_server      = ftp://ftp.fabiomazzola.com
+ftp_server      = ftp.ordersaddon.com
 ftp_port        = 21
-ftp_user        = ordersaddon.curafarma@fabiomazzola.com
-ftp_pass        = -uoy{kB4%}o5
+ftp_user        = basic@ordersaddon.com
+ftp_pass        = fbHjw9kB2UEC
 
 [connection]
 conn_type       = odbc
-conn_dns        = ordersaddon_curafarma
+conn_dns        = ordersaddon_basic
 conn_user       = admin
 conn_pass       = 123456
 
 [api]
-api_url         = http://api.ordersaddon.fabiomazzola.com/curafarma/
-api_key         = 123456
+api_url         = http://api.ordersaddon.com/basic/
+api_key         = 5de268ec-3fe7-4da3-8493-66977258857c
