--- a/_config.ini
+++ b/_config.ini
@@ -11,7 +11,7 @@ ftp_pass        = fbHjw9kB2UEC
 
 [connection]
 conn_type       = odbc
-conn_dns        = ordersaddon_basic
+conn_dns        = ordersaddon_uddistribuzione
 conn_user       = admin
 conn_pass       = 123456
 
