--- a/_config.ini
+++ b/_config.ini
@@ -18,3 +18,11 @@ conn_pass       = 123456
 [api]
 api_url         = http://api.ordersaddon.com/basic/
 api_key         = 5de268ec-3fe7-4da3-8493-66977258857c
+
+[mail]
+mail_host       = smtp.gmail.com
+mail_port       = 587
+mail_user       = fmservice.it@gmail.com
+mail_pass       = wgoadfkzvupkdpku
+mail_from       = fmservice.it@gmail.com
+mail_to         = fabiomazzola@gmail.com
