--- a/__config.curafarma.ini
+++ b/__config.curafarma.ini
@@ -18,3 +18,11 @@ conn_pass       = 123456
 [api]
 api_url         = http://api.ordersaddon.fabiomazzola.com/curafarma/
 api_key         = 123456
+
+[mail]
+mail_host       = smtp.gmail.com
+mail_port       = 587
+mail_user       = fmservice.it@gmail.com
+mail_pass       = wgoadfkzvupkdpku
+mail_from       = fmservice.it@gmail.com
+mail_to         = inbox@ordersaddon.com
