--- a/_config.ini
+++ b/_config.ini
@@ -1,6 +1,6 @@
 [general]
 app_name        = OrdersAddon
-app_customer    = BASE
+app_customer    = UD DISTRIBUZIONE SRL
 app_version     = v1.0.1 Beta
 
 [ftp]
