--- a/__config.uddistribuzione.ini
+++ b/__config.uddistribuzione.ini
@@ -11,7 +11,7 @@ ftp_pass        = -uoy{kB4%}o5
 
 [connection]
 conn_type       = odbc
-conn_dns        = ordersaddon_curafarma
+conn_dns        = ordersaddon_uddistribuzione
 conn_user       = admin
 conn_pass       = 123456
 
